id.txt
 id(a)
140706713389624
>>> b=6
>>> id(b)
140706713389656
>>> c=6
>>> id(c)
140706713389656
>>> c=5
>>> id(5)
140706713389624
>>> a=6
>>> a
6
>>> id(a)
140706713389656
>>> a=9
>>> id(a)
140706713389752




cl
>>> a=1 
>>> b=10
>>> r=range(5)
>>> r     
range(0, 5)
>>> set(r) 
{0, 1, 2, 3, 4}
>>> 
>>> set(range(1,4,1)
... 
... 
... q
  File "<stdin>", line 1
    set(range(1,4,1)
        ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
>>> set(range(1,4,1))
{1, 2, 3}
>>> r=range(20)
>>> set(r)
{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19}
>>> set(range(3,19,3))
{3, 6, 9, 12, 15, 18}
>>> 